sandbox/output
MedicineClashTest.java:68: error: method of in class MedicineClash cannot be applied to given types;
        assertEquals(new ArrayList<Customer>(), MedicineClash.of(customers));
                                                             ^
  required: List<Customer>,long,LocalDate
  found: List<Customer>
  reason: actual and formal argument lists differ in length
1 error
